objects/ssot__RegulatoryTransactionFeeItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CalculationInfoText__c</fullName>
        <label>Calculation Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CommentsText__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FeeAmount__c</fullName>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulatory Transaction Fee Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryTransactionFeeId__c</fullName>
        <label>Regulatory Transaction Fee</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1739512793684_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryTransactionFeeItem_Regulat_rel</label>
        <referenceTo>ssot__RegulatoryTransactionFee__dlm</referenceTo>
        <relationshipLabel>RegulatoryTransactionFeeItem_Regulat_rel</relationshipLabel>
        <relationshipName>rel_1739512793684_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>